--- a/HQEdit_jupyter.ipynb
+++ b/HQEdit_jupyter.ipynb
@@ -21,7 +21,7 @@
         "!GIT_LFS_SKIP_SMUDGE=1 clone -b dev https://github.com/camenduru/HQEdit-hf\n",
         "%cd /content/HQEdit-hf\n",
         "\n",
-        "!pip install git+https://github.com/huggingface/diffusers accelerate gradio datasets\n",
+        "!pip install git+https://github.com/huggingface/diffusers accelerate gradio==3.50.2 datasets\n",
         "\n",
         "!apt -y install -qq aria2\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/spaces/LAOS-Y/HQEdit/resolve/main/imgs/000.png -d /content/HQEdit-hf/imgs -o 000.png\n",
