--- a/HQEdit_jupyter.ipynb
+++ b/HQEdit_jupyter.ipynb
@@ -18,7 +18,7 @@
       "outputs": [],
       "source": [
         "%cd /content\n",
-        "!GIT_LFS_SKIP_SMUDGE=1 clone -b dev https://github.com/camenduru/HQEdit-hf\n",
+        "!GIT_LFS_SKIP_SMUDGE=1 git clone -b dev https://github.com/camenduru/HQEdit-hf\n",
         "%cd /content/HQEdit-hf\n",
         "\n",
         "!pip install git+https://github.com/huggingface/diffusers accelerate gradio==3.50.2 datasets\n",
